--- a/index.html
+++ b/index.html
@@ -5,37 +5,45 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Habit Tracker</title>
+		<link rel="stylesheet" href="reset.css">
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
 	<h1>Habit Tracker</h1>
-
 	<section id="tracker">
-		<section class="habit" id="habit1">
-			<h2>Habit 1</h2>
-			<div class="day day1"></div>
-			<div class="day day2"></div>
-			<div class="day day3"></div>
-			<div class="day day4"></div>
-			<div class="day day5"></div>
-		</section>
-		<section class="habit" id="habit2">
-			<h2>Habit 2</h2>
-			<div class="day day1"></div>
-			<div class="day day2"></div>
-			<div class="day day3"></div>
-			<div class="day day4"></div>
-			<div class="day day5"></div>
-		</section>
-		<section class="habit" id="habit3">
-			<h2>Habit 3</h2>
-			<div class="day day1"></div>
-			<div class="day day2"></div>
-			<div class="day day3"></div>
-			<div class="day day4"></div>
-			<div class="day day5"></div>
-		</section>
+		<h2></h2>
+		<div class="habit">
+			<div class="date">1</div>
+			<div class="date">2</div>
+			<div class="date">3</div>
+			<div class="date">4</div>
+			<div class="date">5</div>
+		</div>
+		<h2>Habit 1</h2>
+		<div class="habit">
+			<div class="day day1" data-day="1"></div>
+			<div class="day day2" data-day="2"></div>
+			<div class="day day3" data-day="3"></div>
+			<div class="day day4" data-day="4"></div>
+			<div class="day day5" data-day="5"></div>
+		</div>
+		<h2>Habit 2</h2>
+		<div class="habit">
+			<div class="day day1" data-day="1"></div>
+			<div class="day day2" data-day="2"></div>
+			<div class="day day3" data-day="3"></div>
+			<div class="day day4" data-day="4"></div>
+			<div class="day day5" data-day="5"></div>
+		</div>
+		<h2>Habit 3</h2>
+		<div class="habit">
+			<div class="day day1" data-day="1"></div>
+			<div class="day day2" data-day="2"></div>
+			<div class="day day3" data-day="3"></div>
+			<div class="day day4" data-day="4"></div>
+			<div class="day day5" data-day="5"></div>
+		</div>
 	</section>
-	
+	<script src="main.js"></script>
 </body>
 </html>
