most basic functionality complete

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			<div class="date">5</div>
 		</div>
 		<h2>Habit 1</h2>
-		<div class="habit">
+		<div class="habit" id="habit1">
 			<div class="day day1" data-day="1"></div>
 			<div class="day day2" data-day="2"></div>
 			<div class="day day3" data-day="3"></div>
@@ -28,7 +28,7 @@
 			<div class="day day5" data-day="5"></div>
 		</div>
 		<h2>Habit 2</h2>
-		<div class="habit">
+		<div class="habit" id="habit2">
 			<div class="day day1" data-day="1"></div>
 			<div class="day day2" data-day="2"></div>
 			<div class="day day3" data-day="3"></div>
@@ -36,7 +36,7 @@
 			<div class="day day5" data-day="5"></div>
 		</div>
 		<h2>Habit 3</h2>
-		<div class="habit">
+		<div class="habit" id="habit3">
 			<div class="day day1" data-day="1"></div>
 			<div class="day day2" data-day="2"></div>
 			<div class="day day3" data-day="3"></div>
