--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 </head>
 <body>
 	<h1>Habit Tracker</h1>
+	<form id="new-habit-form">
+		<label for="new-havit-name">Habit Name</label>
+		<input type="text" id="new-habit-name" />
+		<button id="new-habit">Add Habit</button>
+	</form>
+	
 	<section id="tracker">
 		<h2></h2>
 		<div class="habit">
